--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "private": true,
-  "homepage": "https://mayura-andrew.github.io/mayura_andrew/",
-
+  "homepage": "https://mayuraandrew.tech/",
   "scripts": {
     "dev": "next",
     "build": "node ./scripts/gen-rss.js && next build",
@@ -14,7 +13,8 @@
     "nextra-theme-blog": "^2.0.0-beta.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
@@ -22,5 +22,4 @@
     "@types/react-dom": "^18.0.5",
     "typescript": "^4.7.4"
   }
-
 }
