--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.6.3",
     "gray-matter": "^4.0.3",
+    "jsonp": "^0.2.1",
     "next": "latest",
     "nextra": "^2.0.0-beta.5",
     "nextra-theme-blog": "^2.0.0-beta.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rss": "^1.2.2",
-    "sharp": "^0.33.0"
+    "sharp": "^0.33.0",
+    "styled-components": "^6.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
